--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-item nav-link link-scroll" href="#porque">Porque</a>
                             <a class="nav-item nav-link link-scroll" href="#servicos">Serviços</a>
                             <a class="nav-item nav-link link-scroll" href="#quem-sou">Quem sou</a>
-                            <a class="nav-item nav-link link-scroll" href="#contato">Contato</a>
+                            <a class="nav-item nav-link link-scroll nav-contato" href="#contato">Contato</a>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                             <div class="col-12 col-md-6">
                                 <div class="form-group">
                                     <label for="nome">Nome</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Sebastião Leme">
+                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite aqui seu nome">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
