--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light-blue">
                 <div class="container">
                         <a class="navbar-brand link-scroll" href="#topo">
-                            <img src="img/logowhite.svg" class="logo-expanded" class="d-inline-block align-top" alt="">
+                            <img src="svg/logowhite.svg" class="logo-expanded" class="d-inline-block align-top" alt="">
                         </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -36,8 +36,8 @@
                 </div>
             </nav>
             <div class="banner">
-                <div class="chamada">
-                    <div class="chamada-textos">
+                <div class="chamada container">
+                    <div class="chamada-textos text-center">
                         <h1 class="banner-title">UMA EMPRESA SEM SITE,</h1>
                         <h1 class="banner-title maior">NÃO EXISTE.</h1>
                         <p class="banner-subtitle">Conheça nossos serviços e deixe de ser invisível.</p>
@@ -61,14 +61,14 @@
                                 <p class="article-text">Se o seu negócio for local, como um escritório de advocacia, um estúdio de arquitetura ou um consultório de dentista, você pode usar o seu site para atrair novos clientes e se relacionar com sua audiência. Sendo assim, quando alguém pesquisar no Google por “advogado civil trabalhista em Cataguases”, “arquitetos em Juiz de Fora” ou “dentista em Leopoldina”, um site próprio passaria mais autoridade para os robôs de busca bem como transmitiria uma imagem muito mais profissional ao usuário do que um simples resultado com um endereço e um telefone. </p>
                             </div>
                             <div class="col-12 col-md-6 text-center">
-                                    <img src="img/shop-site.svg" class="img-fluid" style="height: 200px">
+                                    <img src="svg/shop-site.svg" class="img-fluid" style="height: 200px">
                             </div>
                         </div>
                     </article>
                     <article class="anime">
                         <div class="row">
                             <div class="col-12 col-md-6 ordertext">
-                                    <img src="img/pages.svg" class="img-fluid" style="height: 200px">
+                                    <img src="svg/pages.svg" class="img-fluid" style="height: 200px">
                             </div>
                             <div class="col-12 col-md-6 orderimg">
                                 <h1 class="article-title">"Por que ter um site se eu já tenho um facebook
@@ -189,7 +189,7 @@
         </content>
 
         <footer class="text-center p-3 m-0 anime">
-            <a href="#topo" class="link-scroll"><img src="img/logoblue.svg" height="180px"></a>
+            <a href="#topo" class="link-scroll"><img src="svg/logoblue.svg" height="180px"></a>
         </footer>
 
         <!-- Optional JavaScript -->
