--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light-blue">
                 <div class="container">
                         <a class="navbar-brand link-scroll" href="#topo">
-                            <img src="svg/logowhite.svg" class="logo-expanded" class="d-inline-block align-top" alt="">
+                            <img src="img/logowhite.gif" class="logo-expanded" class="d-inline-block align-top" alt="">
                         </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -60,14 +60,14 @@
                                 <h1 class="article-title">"Por que ter um site se eu não vendo pela internet?"</h1>
                                 <p class="article-text">Se o seu negócio for local, como um escritório de advocacia, um estúdio de arquitetura ou um consultório de dentista, você pode usar o seu site para atrair novos clientes e se relacionar com sua audiência. Sendo assim, quando alguém pesquisar no Google por “advogado civil trabalhista em Cataguases”, “arquitetos em Juiz de Fora” ou “dentista em Leopoldina”, um site próprio passaria mais autoridade para os robôs de busca bem como transmitiria uma imagem muito mais profissional ao usuário do que um simples resultado com um endereço e um telefone. </p>
                             </div>
-                            <div class="col-12 col-md-6 text-center">
+                            <div class="col-12 col-md-6 justify-content-center d-flex align-items-center">
                                     <img src="svg/shop-site.svg" class="img-fluid" style="height: 200px">
                             </div>
                         </div>
                     </article>
                     <article class="anime">
                         <div class="row">
-                            <div class="col-12 col-md-6 ordertext">
+                            <div class="col-12 col-md-6 ordertext justify-content-center d-flex align-items-center">
                                     <img src="svg/pages.svg" class="img-fluid" style="height: 200px">
                             </div>
                             <div class="col-12 col-md-6 orderimg">
@@ -177,7 +177,7 @@
         </content>
 
         <footer class="text-center p-3 m-0 anime">
-            <a href="#topo" class="link-scroll"><img src="svg/logoblue.svg" height="180px"></a>
+            <a href="#topo" class="link-scroll"><img src="img/logoblue.gif" height="180px"></a>
         </footer>
 
         <!-- Optional JavaScript -->
