--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/anime.css">
         <title>Leme - Criação de sites e sistemas web em Cataguases e região</title>
         <link href="img/barquinhoicon.png" rel="shortcut icon" type="image/x-png" />
     </head>
@@ -21,7 +20,7 @@
                         <a class="navbar-brand link-scroll" href="#topo">
                             <img src="img/logowhite.gif" class="logo-expanded" class="d-inline-block align-top" alt="">
                         </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -37,12 +36,14 @@
             </nav>
             <div class="banner">
                 <div class="chamada container">
-                    <div class="chamada-textos text-center">
+                    <div class="chamada-textos text-center text-lg-left">
                         <h1 class="banner-title">UMA EMPRESA SEM SITE,</h1>
                         <h1 class="banner-title maior">NÃO EXISTE.</h1>
                         <p class="banner-subtitle">Conheça nossos serviços e deixe de ser invisível.</p>
                     </div>
-                    <a href="#servicos" class="btn btn-verde banner-btn link-scroll">CONFIRA</a>
+                    <div class="text-center text-lg-left">
+                        <a href="#servicos" class="btn btn-verde banner-btn link-scroll">CONFIRA</a>
+                    </div>
                 </div>
                 <div class="scroll-div">
                     <div class='icon-scroll'></div>
