--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="row">
                             <div class="col-12 col-md-6">
                                 <h1 class="article-title">"Por que ter um site se eu não vendo pela internet?"</h1>
-                                <p class="article-text">Se o seu negócio for local, como um escritório de advocacia, um estúdio de arquitetura ou um consultório de dentista, você pode usar o seu site para atrair novos clientes e se relacionar com sua audiência. Sendo assim, quando alguém pesquisar no Google por “advogado civil trabalhista em Cataguases”, “arquitetos em Juiz de Fora” ou “dentista em Leopoldina”, um site próprio passaria mais autoridade para os robôs de busca bem como transmitiria uma imagem muito mais profissional ao usuário do que um simples resultado com um endereço e um telefone. </p>
+                                <p class="article-text">Se o seu negócio for local, como um escritório de advocacia, um estúdio de arquitetura ou um consultório de dentista, você pode usar o seu site para atrair novos clientes e se relacionar com o seu publico. Sendo assim, quando alguém pesquisar no Google por “advogado trabalhista em Cataguases”, “arquitetos em Juiz de Fora” ou “dentistas em Leopoldina”, um site próprio passaria mais autoridade para os robôs de busca bem como transmitiria uma imagem muito mais profissional ao seu cliente do que um simples resultado com um endereço ou um telefone. </p>
                             </div>
                             <div class="col-12 col-md-6 justify-content-center d-flex align-items-center">
                                     <img src="svg/shop-site.svg" class="img-fluid" style="height: 200px">
@@ -74,7 +74,7 @@
                             <div class="col-12 col-md-6 orderimg">
                                 <h1 class="article-title">"Por que ter um site se eu já tenho um facebook
                                         e um instagram?"</h1>
-                                <p class="article-text">Você pode ter uma empresa e um produto fantástico, possuir atendimento de excelente qualidade, mas se o seu cliente não consegue te encontrar, de nada adianta todos esses adjetivos. E um site é a forma mais simples de divulgar a sua empresa na internet.  Ter uma página na web e não apenas contar com as redes sociais gera muito mais confiança no cliente quanto à sua capacidade de realização e entrega, dando um ar de profissionalismo ao seu negócio. Além disso, Em épocas de crise a maior aposta para driblar as dificuldades e continuar crescendo está no mundo online e mais uma vez a criação de um site para a sua empresa se faz necessário.</p>
+                                <p class="article-text">Você pode ter uma empresa e um produto fantástico, possuir atendimento de excelente qualidade, mas se o seu cliente não consegue te encontrar, de nada adianta tudo isso. Um site é a forma mais simples de divulgar a sua empresa na internet pois ter uma página na web e não apenas contar com as redes sociais gera muito mais confiança no cliente quanto à sua capacidade de realização e entrega, dando um ar de profissionalismo ao seu negócio. Além disso, quando seu cliente fizer uma busca no Google, um site irá passar muito mais credibilidade do que um perfil no facebook ou no instagram.</p>
                             </div>
                         </div>
                     </article>
