--- a/a/v2/index.html
+++ b/a/v2/index.html
@@ -14,12 +14,12 @@
     <body>
         <header>
             <nav>
-                <div class="container d-flex justify-content-between">
-                    <a href="#" class="text-light">Leme<span>Dev</span></a>
+                <div class="container d-flex justify-content-between align-items-center pt-3">
+                    <img src="img/logowhite.gif" class="logo">
                     <ul>
-                        <a href="#"><li>Início</li></a>
-                        <a href="#"><li>Porque</li></a>
+                        <a href="#"><li class="nav-active">Início</li></a>
                         <a href="#"><li>Servicos</li></a>
+                        <a href="#"><li>Clientes</li></a>
                         <a href="#"><li>Quem sou</li></a>
                         <a href="#"><li>Contato</li></a>
                     </ul>
@@ -40,36 +40,48 @@
                     <p class="section-p">A nossa equipe é profissional e capacitada para a criação de sites e sistemas completos 
                         de forma personalizada para atender as necessidades do seu negócio.</p>
                     <div class="row">
-                        <div class="col-12 col-md-4">
-                            <article class="servicosArticle">
-                                <img src="img/loja-icon-azul.png" class="article-img" alt="Lojas virtuais">
-                                <h1>Lojas virtuais</h1>
-                                <p>Venda seus produtos na internet através de um site completo e responsivo 
-                                    com métodos seguros de pagamento, além de ter acesso à estatísticas para 
-                                    o acompanhamento do desepenho da sua loja na web.</p>    
-                            </article>
-                        </div>
-
-                        <div class="col-12 col-md-4">
-                            <article class="servicosArticle">
-                                <img src="img/inst-icon-azul.png" class="article-img" alt="Sites">
-                                <h1>Sites</h1>
-                                <p>Apresente sua empresa em uma moderna plataforma otimizada para melhor divulgação 
-                                    dos seus produtos e diferenciais, demonstrando seu profissionalismo com design 
-                                    responsívo para celulares e computadores, otimizado para buscas do Google e com 
-                                    um rápido formulário para contato com seus clientes.</p>
-                            </article>
-                        </div>
-
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-3">
+                            <a href="#">
                                 <article class="servicosArticle">
-                                <img src="img/portal-icon-azul.png" class="article-img" alt="Sistemas web">
-                                <h1>Sistemas web</h1>
-                                <p>Apresente sua empresa em uma moderna plataforma otimizada para melhor divulgação 
-                                    dos seus produtos e diferenciais, demonstrando seu profissionalismo com design 
-                                    responsívo para celulares e computadores, otimizado para buscas do Google e com 
-                                    um rápido formulário para contato com seus clientes.</p>
-                            </article>
+                                    <div class="articleContent">
+                                        <img src="img/loja-icon-azul.png" class="article-img" alt="Lojas virtuais">
+                                        <h1>Lojas virtuais</h1>  
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+
+                        <div class="col-12 col-md-3">
+                            <a href="#">
+                                <article class="servicosArticle">
+                                    <div class="articleContent">
+                                        <img src="img/inst-icon-azul.png" class="article-img" alt="Sites">
+                                        <h1>Sites</h1>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+
+                        <div class="col-12 col-md-3">
+                            <a href="#">
+                                <article class="servicosArticle">
+                                    <div class="articleContent">
+                                        <img src="img/portal-icon-azul.png" class="article-img" alt="Sistemas web">
+                                        <h1>Sistemas web</h1>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+
+                        <div class="col-12 col-md-3">
+                            <a href="#">
+                                <article class="servicosArticle">
+                                    <div class="articleContent">
+                                        <img src="img/seo.png" class="article-img" alt="Sistemas web">
+                                        <h1>SEO</h1>
+                                    </div>
+                                </article>
+                            </a>
                         </div>
                     </div>
                     <div class="chamada">
@@ -110,6 +122,12 @@
                                 do que um perfil no facebook ou no instagram.</p>
                         </article>
                     </div>
+                </div>
+            </section>
+
+            <section id="clientes">
+                <div class="container">
+                    <h1 class="section-title">Clientes</h1>
                 </div>
             </section>
 
