--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
             <div class="nav-items collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav-ul">
-                    <li class="nav-item"><a href="#carrossel" class="nav-link link-scroll active">Início</a></li>
-                    <li class="nav-item"><a href="#produtos" class="nav-link link-scroll">Produtos</a></li>
-                    <li class="nav-item"><a href="#manutencao" class="nav-link link-scroll">Manutenção</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link link-scroll">Contato</a></li>
+                    <li class="nav-item"><a href="#carrossel" class="nav-link ac-link link-scroll active">Início</a></li>
+                    <li class="nav-item"><a href="#produtos" class="nav-link ac-link link-scroll">Produtos</a></li>
+                    <li class="nav-item"><a href="#manutencao" class="nav-link ac-link link-scroll">Manutenção</a></li>
+                    <li class="nav-item"><a href="#contato" class="nav-link ac-link link-scroll">Contato</a></li>
                 </ul>
             </div>
         </nav>
@@ -280,10 +280,10 @@
                 <!-- Content -->
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4">MENU</h5>
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#produtos" class="nav-link">Produtos</a></li>
-                    <li class="nav-item"><a href="#manutencao" class="nav-link">Manutenção</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="#carrossel" class="nav-link link-scroll">Início</a></li>
+                    <li class="nav-item"><a href="#produtos" class="nav-link link-scroll">Produtos</a></li>
+                    <li class="nav-item"><a href="#manutencao" class="nav-link link-scroll">Manutenção</a></li>
+                    <li class="nav-item"><a href="#contato" class="nav-link link-scroll">Contato</a></li>
                 </ul>
             </div>
             <!-- Grid column -->
@@ -327,7 +327,7 @@
                     e.preventDefault();
                 });
             });
-            var $items = $('.nav-link');
+            var $items = $('.ac-link');
 
             $items.bind('click', function(){
                 $items.each(function(){
