--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <a href="#"><img src="logomarca.png" alt="Ram Solucoes" class="nav-logomarca"></a>
                 
                 <ul class="nav-ul">
-                    <li ><a href="#carrossel" class="nav-link link-scroll active">Início</a></li>
-                    <li class="nav-item"><a href="#produtos" class="nav-link link-scroll">Produtos</a></li>
-                    <li class="nav-item"><a href="#manutencao" class="nav-link link-scroll">Manutenção</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link link-scroll">Contato</a></li>
+                    <li ><a href="#carrossel" class="nav-link ac-link link-scroll active">Início</a></li>
+                    <li class="nav-item"><a href="#produtos" class="nav-link ac-link link-scroll">Produtos</a></li>
+                    <li class="nav-item"><a href="#manutencao" class="nav-link ac-link link-scroll">Manutenção</a></li>
+                    <li class="nav-item"><a href="#contato" class="nav-link ac-link link-scroll">Contato</a></li>
                 </ul>
             </div>
         </nav>
