--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -259,7 +260,7 @@
         <!-- Fim dos Modais -->
 
         <!-- Footer -->
-        <footer id="contato" class="page-footer font-small bg-dark text-white pt-4" data-aos="fade-left">
+        <footer id="contato" class="page-footer font-small bg-dark text-white pt-4" data-aos="fade-up">
         <!-- Footer Links -->
         <div class="container text-center text-md-left">
             <!-- Call to action -->
