--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
             </section>
             <div class="container">
-                <section id="manutencao" class="mb-5 mt-5 pt-5 pb-5 bg-white border w-100" data-aos="zoom-out">
+                <section id="manutencao" class="mb-5 mt-5 pt-5 pb-5 bg-white border w-100" data-aos="zoom-in">
                     <div class="container text-center">
                         <h1>Smartphone em manutenção?</h1>
                         <div class="row mt-3 d-flex align-items-center justify-content-center">
