--- a/index.html
+++ b/index.html
@@ -145,34 +145,15 @@
             <div class="contato p-5 anime" id="contato">
                 <div class="container">
                     <h1 class="contato-title">Vamos construir sua marca na web juntos?</h1>
-                    <p>Entre em contato diretamente comigo através do formulário, redes sociais ou whatsapp.</p>
-                    <form method="post" action="send.php">
-                        <div class="row p-0">
-                            <div class="col-12 col-md-6">
-                                <div class="form-group">
-                                    <label for="nome">Nome</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite aqui seu nome">
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="exemplo@email.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="mensagem">Mensagem</label>
-                                    <textarea class="form-control" id="mensagem" name="mensagem" rows="5" placeholder="Digite aqui sua mensagem"></textarea>
-                                </div>
-                                <button class="btn btn-light enviar-btn mb-2">ENVIAR</button>
-                            </div>
-                            <div class="col-12 col-md-6">
-                                <strong>Email</strong>
-                                <h3>antonycefet@gmail.com</h3>
-                                <strong>Facebook</strong>
-                                <h3><a href="https://www.facebook.com/antony.lmnv" class="contact-link" target="_blank">fb/antony.lmnv</a></h3>
-                                <strong>WhatsApp</strong>
-                                <h3>(32) 98872-6589</h3>
-                            </div>
-                        </div>
-                    </form>
+                    <p>Entre em contato diretamente comigo por email, redes sociais ou whatsapp.</p>
+                    <div class="col-12 col-md-6">
+                        <strong>Email</strong>
+                        <h3>antonycefet@gmail.com</h3>
+                        <strong>Facebook</strong>
+                        <h3><a href="https://www.facebook.com/antony.lmnv" class="contact-link" target="_blank">fb/antony.lmnv</a></h3>
+                        <strong>WhatsApp</strong>
+                        <h3>(32) 98872-6589</h3>
+                    </div>
                 </div>
             </div>
         </content>
