--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
                 <div class="sessao-margem anime" id="porque">
                     <h1 class="content-title">Visando o seu sucesso</h1>
                     <article class="anime">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-12 col-md-6">
                                 <h1 class="article-title">"Por que ter um site se eu não vendo pela internet?"</h1>
                                 <p class="article-text">Se o seu negócio for local, como um escritório de advocacia, um estúdio de arquitetura ou um consultório de dentista, você pode usar o seu site para atrair novos clientes e se relacionar com o seu publico. Sendo assim, quando alguém pesquisar no Google por “advogado trabalhista em Cataguases”, “arquitetos em Juiz de Fora” ou “dentistas em Leopoldina”, um site próprio passaria mais autoridade para os robôs de busca bem como transmitiria uma imagem muito mais profissional ao seu cliente do que um simples resultado com um endereço ou um telefone. </p>
                             </div>
                             <div class="col-12 col-md-6 justify-content-center d-flex align-items-center">
-                                    <img src="svg/shop-site.svg" class="img-fluid" style="height: 200px">
+                                    <img src="svg/open_store_online.svg" class="img-fluid" style="height: 300px">
                             </div>
                         </div>
                     </article>
                     <article class="anime">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-12 col-md-6 ordertext justify-content-center d-flex align-items-center">
-                                    <img src="svg/pages.svg" class="img-fluid" style="height: 200px">
+                                    <img src="svg/social_media_1.svg" class="img-fluid" style="height: 300px">
                             </div>
                             <div class="col-12 col-md-6 orderimg">
                                 <h1 class="article-title">"Por que ter um site se eu já tenho um facebook
