--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="servicos row">
                         <article class="article-servico col-12 col-md-4 anime">
                             <div class="article-servico-header">
-                                <img src="img/loja-icon-azul.png" width="150px">
+                                <img src="svg/online_shopping.svg" height="190px">
                                 <h1 class="article-servico-title">Loja<br>Virtual</h1>
                             </div>
                             <div class="article-servico-body">
@@ -98,7 +98,7 @@
                         </article>
                         <article class="article-servico col-12 col-md-4 anime">
                             <div class="article-servico-header">
-                                <img src="img/inst-icon-azul.png" width="150px">
+                                <img src="svg/building_website.svg" height="190px">
                                 <h1 class="article-servico-title">Site<br>Institucional</h1>
                             </div>
                             <div class="article-servico-body">
@@ -108,7 +108,7 @@
                         </article>
                         <article class="article-servico col-12 col-md-4 anime">
                             <div class="article-servico-header">
-                                <img src="img/portal-icon-azul.png" width="150px">
+                                <img src="svg/marketing_2.svg" height="190px">
                                 <h1 class="article-servico-title">Portal/Blog<br>Web</h1>
                             </div>
                             <div class="article-servico-body">
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-12 col-md-6 orderimg">
                             <h1 class="quem-sou-title mobile">Quem sou</h1>
-                            <img src="img/euleme2.png" class="img-fluid">
+                            <img src="svg/personal_data_1.svg" class="img-fluid">
                         </div>
                     </div>
                     
