--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <body>
         <header id="topo">
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light-blue">
-                <div class="container">
+                <div class="container pl-0 pr-0">
                         <a class="navbar-brand link-scroll" href="#topo">
-                            <img src="img/logowhite.gif" class="logo-expanded" class="d-inline-block align-top" alt="">
+                            <h1 class="banner-title">AL</h1>
                         </a>
                     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                 </div>
             </nav>
             <div class="banner">
-                <div class="chamada container">
+                <div class="chamada container pl-0">
                     <div class="chamada-textos text-center text-lg-left">
                         <h1 class="banner-title">UMA EMPRESA SEM SITE,</h1>
                         <h1 class="banner-title maior">NÃO EXISTE.</h1>
@@ -159,7 +159,7 @@
         </content>
 
         <footer class="text-center p-3 m-0 anime">
-            <a href="#topo" class="link-scroll"><img src="img/logoblue.gif" height="180px"></a>
+            <a href="#topo" class="nav-link link-scroll"><h1 class="content-title" style="font-size: 4em">AL</h1></a>
         </footer>
 
         <!-- Optional JavaScript -->
