--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
         </content>
 
         <footer class="text-center p-3 m-0 anime">
-            <a href="#topo" class="nav-link link-scroll"><h1 class="content-title" style="font-size: 4em">AL</h1></a>
+            <a href="#topo" class="nav-link link-scroll mb-0"><h1 class="content-title mb-0 p-0" style="font-size: 4em">ANTONY LEME</h1></a>
+            <p class="mt-0 p-0">Desenvolvimento de sites e sistemas web em Cataguases e região.</p>
         </footer>
 
         <!-- Optional JavaScript -->
