--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
 
         <content>
-            <div class="container">
+            <div class="container pl-0 pr-0">
                 <div class="sessao-margem anime" id="porque">
                     <h1 class="content-title">Visando o seu sucesso</h1>
                     <article class="anime">
@@ -142,24 +142,24 @@
                     
                 </div>
             </div>
-            <div class="contato p-5 anime" id="contato">
-                <div class="container">
+            <div class="contato pt-5 pb-5 anime" id="contato">
+                <div class="container p-0">
                     <h1 class="contato-title">Vamos construir sua marca na web juntos?</h1>
                     <p>Entre em contato diretamente comigo por email, redes sociais ou whatsapp.</p>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 pl-0 pr-0">
                         <strong>Email</strong>
                         <h3>antonycefet@gmail.com</h3>
                         <strong>Facebook</strong>
                         <h3><a href="https://www.facebook.com/antony.lmnv" class="contact-link" target="_blank">fb/antony.lmnv</a></h3>
                         <strong>WhatsApp</strong>
-                        <h3>(32) 98872-6589</h3>
+                        <a href="https://api.whatsapp.com/send?phone=5532988726589&text=Ol%C3%A1!%20Vi%20seu%20site%20e%20estou%20interessado%20nos%20seus%20servi%C3%A7os!" class="contact-link" target="_blank"><h3>(32) 98872-6589</h3></a>
                     </div>
                 </div>
             </div>
         </content>
 
         <footer class="text-center p-3 m-0 anime">
-            <a href="#topo" class="nav-link link-scroll mb-0"><h1 class="content-title mb-0 p-0" style="font-size: 4em">ANTONY LEME</h1></a>
+            <a href="#topo" class="nav-link link-scroll mb-0"><h1 class="content-title mb-0 p-0" style="font-size: 3.5em">ANTONY LEME</h1></a>
             <p class="mt-0 p-0">Desenvolvimento de sites e sistemas web em Cataguases e região.</p>
         </footer>
 
