--- a/v3/index.html
+++ b/v3/index.html
@@ -30,15 +30,12 @@
         </nav>
 
         <header>
-            <div class="container">
+            <div class="container headerContainer d-flex align-items-center">
                 <div class="row">
-                    <div class="headerTextos col-12 col-md-7 mt-auto mb-auto">
+                    <div class="headerTextos col-12 col-md-7">
                         <h1>Uma empresa sem site,<br>não existe.</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis urna turpis. Etiam finibus egestas justo in luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                         <a href="#" class="chamadaBtn">Saiba mais</a> <a href="#" class="chamadaBtnOutlined">Fale comigo</a>
-                    </div>
-                    <div class="headerImagem col-12 col-md-5 text-right mt-auto mb-auto">
-                        <img src="svg/invisivel-ilustracao.svg" alt="Uma empresa sem site não existe" height="400px">
                     </div>
                 </div>
             </div>
