--- a/v3/index.html
+++ b/v3/index.html
@@ -47,7 +47,7 @@
                     <article>
                         <div class="row">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
-                                <img src="svg/undraw_experience_design_eq3j.svg" alt="Sites institucionais e portfóilios" height="200px">
+                                <img src="svg/undraw_experience_design_eq3j.svg" alt="Sites institucionais e portfóilios" class="img-fluid">
                             </div>
                             <div class="articleTextos col-12 col-md-8 mt-auto mb-auto">
                                 <h1>Sites institucionais e portfólios</h1>
@@ -67,7 +67,7 @@
                                 <a href="#" class="chamadaBtn">Fale comigo!</a>
                             </div>
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
-                                <img src="svg/undraw_online_shopping_ga73 (2).svg" alt="Lojas virtuais" height="200px">
+                                <img src="svg/undraw_online_shopping_ga73 (2).svg" alt="Lojas virtuais" class="img-fluid">
                             </div>
                         </div>
                     </article>
@@ -75,7 +75,7 @@
                     <article>
                         <div class="row">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
-                                <img src="svg/undraw_features_overview_jg7a.svg" alt="Sistemas e serviços web" height="180px">
+                                <img src="svg/undraw_features_overview_jg7a.svg" alt="Sistemas e serviços web" class="img-fluid">
                             </div>
                             <div class="articleTextos col-12 col-md-8 mt-auto mb-auto">
                                 <h1>Sistemas e serviços web</h1>
