--- a/v3/index.html
+++ b/v3/index.html
@@ -4,13 +4,14 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <script src="https://kit.fontawesome.com/dbcb79c0f0.js"></script>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
         <title>Antony Leme</title>
     </head>
     <body>
+        <a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand logomarca" href="#">antony<span class="leme">leme</span></a>
@@ -18,24 +19,24 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto mr-auto mr-md-0">
-                        <a class="nav-item nav-link active" href="#">Início</a>
-                        <a class="nav-item nav-link" href="#">Serviços</a>
-                        <a class="nav-item nav-link" href="#">Portfólio</a>
-                        <a class="nav-item nav-link" href="#">Clientes</a>
-                        <a class="nav-item nav-link contatoBtn" href="#">Contato</a>
+                    <div class="navbar-nav ml-auto mr-md-0">
+                        <a class="nav-item nav-link active link-scroll" href="#inicio">Início</a>
+                        <a class="nav-item nav-link link-scroll" href="#servicos">Serviços</a>
+                        <a class="nav-item nav-link link-scroll" href="#portfolio">Portfólio</a>
+                        <a class="nav-item nav-link link-scroll" href="#clientes">Clientes</a>
+                        <a class="nav-item nav-link link-scroll contatoBtn" href="#contato">Contato</a>
                     </div>
                 </div>
             </div>
         </nav>
 
-        <header>
+        <header id="inicio">
             <div class="container headerContainer d-flex align-items-center">
                 <div class="row">
                     <div class="headerTextos col-12 col-md-7">
                         <h1>Uma empresa sem site,<br>não existe.</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis urna turpis. Etiam finibus egestas justo in luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                        <a href="#" class="chamadaBtn">Saiba mais</a> <a href="#" class="chamadaBtnOutlined">Fale comigo</a>
+                        <a href="#servicos" class="chamadaBtn link-scroll">Saiba mais</a> <a href="#contato" class="chamadaBtnOutlined link-scroll">Fale comigo</a>
                     </div>
                 </div>
             </div>
@@ -45,7 +46,7 @@
             <section id="servicos">
                 <div class="container">
                     <article>
-                        <div class="row">
+                        <div class="row wrapper">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
                                 <img src="svg/undraw_experience_design_eq3j.svg" alt="Sites institucionais e portfóilios" class="img-fluid">
                             </div>
@@ -53,18 +54,18 @@
                                 <h1>Sites institucionais e portfólios</h1>
                                 <p>Vivamus sed porta mauris, eu vehicula justo. Donec porta ex ex, sit amet dictum elit ultricies nec. Ut convallis pulvinar erat vel semper. Nulla nisi eros, accumsan at lectus nec, maximus vestibulum nulla. </p>
                                 <p>Tem uma empresa, negócio ou hobby?</p>
-                                <a href="#" class="chamadaBtn">Fale comigo!</a>
+                                <a href="#contato" class="chamadaBtn servicosBtn link-scroll">Fale comigo!</a>
                             </div>
                         </div>
                     </article>
 
                     <article>
-                        <div class="row">
+                        <div class="row wrapper">
                             <div class="articleTextos col-12 col-md-8 mt-auto mb-auto">
                                 <h1>Lojas virtuais</h1>
                                 <p>Cras ipsum justo, vestibulum nec elementum vitae, cursus id ante. Nunc posuere augue elit, nec aliquet felis auctor eu. Pellentesque vitae facilisis augue, sit amet iaculis ante. Etiam vel lacus a purus varius hendrerit.</p>
                                 <p>Quer começar ou expandir suas vendas?</p>
-                                <a href="#" class="chamadaBtn">Fale comigo!</a>
+                                <a href="#contato" class="chamadaBtn servicosBtn link-scroll">Fale comigo!</a>
                             </div>
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
                                 <img src="svg/undraw_online_shopping_ga73 (2).svg" alt="Lojas virtuais" class="img-fluid">
@@ -73,7 +74,7 @@
                     </article>
 
                     <article>
-                        <div class="row">
+                        <div class="row wrapper">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
                                 <img src="svg/undraw_features_overview_jg7a.svg" alt="Sistemas e serviços web" class="img-fluid">
                             </div>
@@ -81,7 +82,7 @@
                                 <h1>Sistemas e serviços web</h1>
                                 <p>Curabitur sodales et sem a accumsan. Mauris convallis eros ut neque vestibulum tempus. Praesent vulputate, lorem eu tempor ornare, sem erat lacinia lacus, eu dapibus mi purus eget velit. Proin neque ex, viverra gravida turpis eu, pulvinar elementum quam. </p>
                                 <p>Tem uma ideia ou serviço?</p>
-                                <a href="#" class="chamadaBtn">Fale comigo!</a>
+                                <a href="#contato" class="chamadaBtn servicosBtn link-scroll">Fale comigo!</a>
                             </div>
                         </div>
                     </article>
@@ -100,8 +101,8 @@
                     <h1>Clientes</h1>
                     <p>Nunc at eleifend enim. Cras posuere purus erat, in malesuada velit sodales ac. Fusce lacus leo, fermentum at convallis ut, eleifend in enim. Duis eget luctus risus.</p>
                     <div class="clientes">
-                        <img src="img/clientes/ram.png" alt="RAM Soluções logomarca" height="60px">
-                        <img src="img/clientes/podium.png" alt="Grupo Podium logomarca" height="60px">
+                        <img src="img/clientes/ram.png" alt="RAM Soluções logomarca" width="150px">
+                        <img src="img/clientes/podium.png" alt="Grupo Podium logomarca" width="100px">
                     </div>
                 </div>
             </section>
@@ -127,8 +128,9 @@
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
