--- a/v3/index.html
+++ b/v3/index.html
@@ -113,7 +113,7 @@
                     <p>Deixe seu e-mail ou número e eu entrarei em contato com você!</p>
                     <input type="text" placeholder="Digite aqui seu e-mail ou número de telefone"><input type="submit" value="Enviar">
                     <h2>Ou se preferir me chame no WhatsApp!</h2>
-                    <a href="#" class="chamarBtn">Chamar</a>
+                    <a href="https://api.whatsapp.com/send?phone=5532988726589&text=Ol%C3%A1!%20Vi%20seu%20site%20e%20estou%20interessado%20nos%20seus%20servi%C3%A7os!" class="chamarBtn">Chamar</a>
                     <h3>(32) 9 8872-6589</h3>
                 </div>
             </section>
