--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="headerTextos col-12 col-md-7">
                         <h1>Uma empresa sem site,<br>não existe.</h1>
-                        <p>As pessoas vão saber que você existe só depois que te encontrarem na internet! Conheça nossos serviços e deixe de ser invisível!</p>
+                        <p>As pessoas só irão saber que você existe depois que te encontrarem na internet! Conheça nossos serviços e deixe de ser invisível!</p>
                         <a href="#servicos" class="chamadaBtn link-scroll">Saiba mais</a> <a href="#contato" class="chamadaBtnOutlined link-scroll">Fale comigo</a>
                     </div>
                 </div>
