--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h1>Portfólio</h1>
                     <p>Confira alguns dos meus trabalhos já realizados abaixo e passe o mouse ou clique sobre eles para ver as descrições e as imagens.</p>
                     <div class="row mt-5">
-                        <div class="col-4">
+                        <div class="col-6 col-md-4">
                             <div class="portfolioItem" data-toggle="modal" data-target="#ramModal">
                                 <img src="img/portfolio/ram/INDEX.png" alt="Site RAM Soluções index" class="img-fluid">
                                 <div class="portfolioBotao">
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-6 col-md-4">
                             <div class="portfolioItem" data-toggle="modal" data-target="#podiumModal">
                                 <img src="img/portfolio/podium/aluno2.png" alt="Sistema Grupo Podium" class="img-fluid">
                                 <div class="portfolioBotao">
