--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="container text-center">
                     <h1>Fale comigo!</h1>
                     <p>Deixe seu e-mail ou número e eu entrarei em contato com você!</p>
-                    <form name="contatos" method="POST" data-netlify="true"></form>
+                    <form name="contatos" method="POST" data-netlify="true">
                         <input type="text" name="email-telefone" placeholder="Digite aqui seu e-mail ou número de telefone"><input type="submit" value="Enviar">
                     </form>
                     <h2>Ou se preferir me chame no WhatsApp!</h2>
