--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
             <section id="contato" class="d-flex align-items-center">
                 <div class="container text-center">
                     <h1>Fale comigo!</h1>
-                    <p>Deixe seu e-mail ou número e eu entrarei em contato com você!</p>
+                    <p>Deixe seu nome e seu e-mail ou número e eu entrarei em contato com você!</p>
                     <form name="contatos" method="POST" data-netlify="true">
-                        <input type="text" name="email-telefone" placeholder="Digite aqui seu e-mail ou número de telefone"><input type="submit" value="Enviar">
+                        <input type="text" name="contato" placeholder="Ex: Antony 32988726589"><input type="submit" value="Enviar">
                     </form>
                     <h2>Ou se preferir me chame no WhatsApp!</h2>
                     <a href="https://api.whatsapp.com/send?phone=5532988726589&text=Ol%C3%A1!%20Vi%20seu%20site%20e%20estou%20interessado%20nos%20seus%20servi%C3%A7os!" class="chamarBtn">Chamar</a>
