--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <h1>Fale comigo!</h1>
                     <p>Deixe seu nome e seu e-mail ou número e eu entrarei em contato com você!</p>
                     <form name="contatos" method="POST" data-netlify="true">
-                        <input type="text" name="nome" placeholder="Seu nome"><input type="text" name="contato" placeholder="Seu contato"><input type="submit" value="Enviar">
+                        <input type="text" name="nome" placeholder="Seu nome" required><input type="text" name="contato" placeholder="Seu contato" required><input type="submit" value="Enviar">
                     </form>
                     <h2>Ou se preferir me chame no WhatsApp!</h2>
                     <a href="https://api.whatsapp.com/send?phone=5532988726589&text=Ol%C3%A1!%20Vi%20seu%20site%20e%20estou%20interessado%20nos%20seus%20servi%C3%A7os!" class="chamarBtn">Chamar</a>
