--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 <img src="svg/undraw_experience_design_eq3j.svg" alt="Sites institucionais e portfóilios" class="img-fluid">
                             </div>
                             <div class="articleTextos col-12 col-md-8 mt-auto mb-auto">
-                                <h1>Sites institucionais e portfólios</h1>
-                                <p>Com os smartphones, tablets e notebooks, uma das primeiras coisas que uma pessoa faz quando quer saber mais informação de algo é acessar a internet. Já parou para pensar que se eles estão buscando algo e não te acharem, você vai perder dinheiro?</p>
+                                <h1>Sites e portfólios</h1>
+                                <p>Com os smartphones, tablets e notebooks, uma das primeiras coisas que uma pessoa faz quando quer saber mais informação de algo é acessar a internet. Já parou para pensar que seus clientes estiverem buscando seu serviço e não te acharem, você vai perder dinheiro?</p>
                                 <p>Tem uma empresa, negócio ou hobby?</p>
                                 <a href="#contato" class="chamadaBtn servicosBtn link-scroll">Fale comigo!</a>
                             </div>
