--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Antony Leme</title>
     </head>
     <body>
-        <a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>
+        <!--<a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand logomarca" href="#">antony<span class="leme">leme</span></a>
