--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                     <p>Confira alguns dos meus trabalhos já realizados abaixo e passe o mouse ou clique sobre eles para ver as descrições e as imagens.</p>
                     <div class="row mt-5">
                         <div class="col-6 col-md-4">
+                            <div class="portfolioItem" data-toggle="modal" data-target="#petModal">
+                                <img src="img/portfolio/petkta/index.png" alt="Site Estação Pet Kta index" class="img-fluid">
+                                <div class="portfolioBotao">
+                                    <div class="d-block text-center">
+                                        <p class="portfolioLegenda">Site da PetKta</p>
+                                        <button class="chamadaBtn mr-0" data-toggle="modal" data-target="#petModal">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4">
                             <div class="portfolioItem" data-toggle="modal" data-target="#ramModal">
                                 <img src="img/portfolio/ram/INDEX.png" alt="Site RAM Soluções index" class="img-fluid">
                                 <div class="portfolioBotao">
@@ -150,6 +161,48 @@
             <h1>antony<span class="leme">leme</span></h1>
             <p>Desenvolvimento de sites e sistemas web em Cataguases e região.</p>
         </footer>
+
+        <div class="modal fade" id="petModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Site da Estação PetKta</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>O projeto se baseia na renovação da identidade visual da empresa Estação PetKta, localizada em Cataguases - MG. O cliente possuía um site antigo e desatualizado, fora dos padrões de design e SEO atuais. O site foi redesenhado do zero e apresentado para o cliente. Atualmente o projeto está em andamento, com a codificação do protótipo apresentado.</p>
+                        <p>Segue abaixo a imagem da página principal do site.</p>
+                        
+                        <div class="bd-example">
+                            <div id="carouselExampleCaptions2" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions2" data-slide-to="0" class="active"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/portfolio/petkta/index.png" class="d-block w-100" alt="Página principal da PetKta.">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Página one page do site</h5>
+                                            <p>Contém todos os conteúdos do site em uma única page seguindo o modelo "one page".</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleCaptions2" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions2" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="modal fade" id="ramModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
