--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="//code.jivosite.com/widget.js" data-jv-id="LbMmV797cy" async></script>
         <title>Antony Leme</title>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145753384-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-145753384-1');
+        </script>
+
     </head>
     <body>
         <!--<a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>-->
